# ReadyTrader-Stocks

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  RELEASE_READINESS_CHECKLIST.md  ROADMAP_10_OF_10.md  RUNBOOK.md  SECURITY.md  bandit_final.json  bandit_report.json  env.example  execution_store.py  policy_engine.py  pyproject.toml  rate_limiter.py  requirements-dev.txt  requirements.lock.txt  requirements.txt  server.py  smithery.yaml
app/: README.md  api_server.py  main.py
common/: cache.py  errors.py  idempotency.py
configs/: README.md  agent_zero.mcp.yaml  claude_desktop.mcp-server-config.json
core/: backtest.py  paper.py  policy.py  risk.py  stress_test.py
docs/: CUSTODY.md  ERRORS.md  EXCHANGES.md  MARKETDATA.md  POSITIONING.md  SENTIMENT.md  THREAT_MODEL.md  TOOLS.md
examples/: paper_quick_demo.py  simulation_demo.py  stress_test_demo.py  verify_live_strategy.py  verify_stocks.py
execution/: alpaca_service.py  base.py  binance_user_stream.py  cex_executor.py  ibkr_service.py  models.py  private_updates.py  retail_services.py  retry.py  router.py  store.py  tradier_service.py
intelligence/: __init__.py  core.py  insights.py  learning.py  recommendations.py  regime.py  technical_analysis.py
marketdata/: __init__.py  bus.py  exchange_provider.py  plugin_examples.py  providers.py  store.py  synthetic.py  ws_streams.py
observability/: __init__.py  audit.py  logging.py  metrics.py  prometheus.py  webhooks.py
prompts/: READYTRADER_PROMPT_PACK.md
sentinel/: app.py
strategy/: marketplace.py  moving_average.py
(+49 files in other folders)
